--- a/package.json
+++ b/package.json
@@ -20,6 +20,12 @@
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
-        "vue": "^2.5.17"
+        "vue": "^2.5.17",
+        "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "datatables.net-bs4": "^1.10.19",
+        "datatables.net-responsive": "^2.2.3",
+        "datatables.net-responsive-bs4": "^2.2.3"
     }
 }
